--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.0.1
 homepage: https://github.com/onatcipli/rename.git
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
+  sdk: ">=2.14.0 <3.0.0"
 
 executables:
   rename:
@@ -12,6 +12,7 @@ executables:
 dependencies:
   args: ^2.3.0
   logger: ^1.1.0
+  recase: ^4.0.0
 
 dev_dependencies:
   pedantic: ^1.11.1
