--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ executables:
   rename:
 
 dependencies:
-  args: ^2.3.0
-  logger: ^1.1.0
-  recase: ^4.0.0
+  args: ^2.4.2
+  logger: ^2.0.2+1
+  recase: ^4.1.0
 
 dev_dependencies:
   pedantic: ^1.11.1
